tests/examples/bad/class_redeclaration.lat
int main() {
    return 1;
}
 
class A {
    int a;
}

class A {}
